--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>RYAN.GOSLING</title>
         <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -15,7 +16,20 @@
                 <a href="#">Home</a>
                 <a href="#">Biography</a>
                 <a href="#">Work and Influence</a>
-                <a href="#">Films</a>
+
+
+            <div class="menu-item">
+                <span class="menu-text">
+                Films Gallery
+                <span class="arrow">▾</span>
+                </span>
+
+                <div class="dropdown">
+                    <a href="drive.html">Drive</a>
+                    <a href="br9.html">Blade Runner 2049</a>
+                    <a href="la.html">La La Land</a>
+                </div>
+            </div>
                 <a href="#">Why Him</a>
                 <a href="#">Media</a>
                 <a href="#">Links</a>
@@ -25,11 +39,84 @@
         <section class="banner">
         <img src="img/banner.jpg" alt="Ryan Gosling banner">
         </section>
+                    
+        <div class="container">
 
-<main>
-  <p>Тут багато контенту...</p>
-</main>
+  <section class="hero">
+    <div class="hero-text">
+      <h2>Ryan Gosling</h2>
+      <h3>Actor. Musician. Cultural Icon.</h3>
+      <p>
+        Ryan Gosling is a Canadian actor and musician known for his emotional depth,
+        artistic integrity, and unforgettable performances across modern cinema.
+        <br><br><a href="biography.html" class="btn">Learn More</a>
+      </p>
+    </div>
+  </section>
 
+ 
+  <section class="introduction">
+    <h2>Introduction</h2>
+    <p>
+      Ryan Gosling has established himself as one of the most respected actors
+      of his generation. His performances are often subtle, restrained, and deeply human,
+      bringing complex characters to life with authenticity and nuance.
+    </p>
+  </section>
+
+
+  <section class="facts">
+    <h2>Quick Facts</h2>
+    <ul>
+      <li><strong>Profession:</strong> Actor, Musician</li>
+      <li><strong>Born:</strong> November 12, 1980, Canada</li>
+      <li><strong>Awards:</strong> Golden Globe Winner</li>
+      <li><strong>Genres:</strong> Drama, Romance, Thriller</li>
+      <li><strong>Music:</strong> Dead Man’s Bones</li>
+    </ul>
+  </section>
+
+
+  <section class="career">
+    <h2>Career Highlights</h2>
+    <p>
+      From independent films like <em>The Believer</em> to internationally
+      acclaimed productions such as <em>La La Land</em> and
+      <em>Blade Runner 2049</em>, Gosling’s career reflects a commitment
+      to meaningful, character-driven storytelling.
+    </p>
+  </section>
+
+
+  <section class="filmography">
+    <h2>Selected Filmography</h2>
+    <ul>
+      <li>The Notebook (2004)</li>
+      <li>Drive (2011)</li>
+      <li>La La Land (2016)</li>
+      <li>Blade Runner 2049 (2017)</li>
+      <li>Barbie (2023)</li>
+    </ul>
+    <a href="films.html" class="btn">View Full Filmography</a>
+  </section>
+
+  <section class="why">
+    <h2>Why Ryan Gosling?</h2>
+    <p>
+      Ryan Gosling stands out for his artistic courage and depth.
+      He consistently chooses roles that challenge conventions,
+      redefining modern masculinity and emotional expression in cinema.
+      <br><br><a href="why.html" class="btn">Discover Why</a>
+    </p>
+  </section>
+
+    <section class="quote">
+    <blockquote>
+      “I like to explore the darker side of things.
+      I think that’s where the most interesting stories are.” - Ryan Golsing
+    </blockquote>
+  </section>
+                        </div>
 
 <footer>
 <p>© 2026 RYAN GOLSING. All rights reserved. </p>
