--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <header class="header">
-            <div class="logo">HERO_RYAN_GOSLING</div>
+            <div class="logo">HERO RYAN GOSLING</div>
                 <nav class="menu">
                 <a href="#">Home</a>
                 <a href="#">Biography</a>
