--- a/la.html
+++ b/la.html
@@ -11,11 +11,11 @@
 
     <body>
         <header class="header">
-            <div class="logo">HERO_RYAN_GOSLING</div>
+            <div class="logo">HERO RYAN GOSLING</div>
                 <nav class="menu">
                 <a href="index.html">Home</a>
-                <a href="#">Biography</a>
-                <a href="#">Work and Influence</a>
+                <a href="bio.html">Biography</a>
+                <a href="work.html">Work and Influence</a>
 
 
             <div class="menu-item">
@@ -30,8 +30,8 @@
                     <a href="la.html">La La Land</a>
                 </div>
             </div>
-                <a href="#">Why Him</a>
-                <a href="#">Media</a>
+                <a href="why.html">Why Him</a>
+                <a href="mem.html">Meme</a>
                 <a href="#">Links</a>
                 </nav>
         </header>
