--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <a href="drive.html">Drive</a>
                     <a href="br9.html">Blade Runner 2049</a>
                     <a href="la.html">La La Land</a>
+                    <a href="barb.html">Barbie</a>
                 </div>
             </div>
                 <a href="why.html">Why Him</a>
@@ -49,7 +50,7 @@
       <p>
         Ryan Gosling is a Canadian actor and musician known for his emotional depth,
         artistic integrity, and unforgettable performances across modern cinema.
-        <br><br><a href="biography.html" class="btn">Learn More</a>
+        <br><br><a href="bio.html" class="btn">Learn More</a>
       </p>
     </div>
   </section>
@@ -84,6 +85,7 @@
       acclaimed productions such as <em>La La Land</em> and
       <em>Blade Runner 2049</em>, Gosling’s career reflects a commitment
       to meaningful, character-driven storytelling.
+      <br><br><a href="work.html" class="btn">Learn More</a>
     </p>
   </section>
 
@@ -97,7 +99,6 @@
       <li>Blade Runner 2049 (2017)</li>
       <li>Barbie (2023)</li>
     </ul>
-    <a href="films.html" class="btn">View Full Filmography</a>
   </section>
 
   <section class="why">
