--- a/mem.html
+++ b/mem.html
@@ -28,6 +28,7 @@
                     <a href="drive.html">Drive</a>
                     <a href="br9.html">Blade Runner 2049</a>
                     <a href="la.html">La La Land</a>
+                    <a href="barb.html">Barbie</a>
                 </div>
             </div>
                 <a href="why.html">Why Him</a>
@@ -72,15 +73,16 @@
     
    <div class="video shorts">
   <iframe
-    src="https://www.youtube.com/embed/jIu8Gu1ePHs"
+  
+    src="https://www.youtube.com/embed/jIu8Gu1ePHs" 
     title="YouTube Shorts"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    allowfullscreen
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  
+    allowfullscreen 
     loading="lazy"
     referrerpolicy="strict-origin-when-cross-origin">
   </iframe>
 </div>
-
+<!-- video guide https://youtu.be/P6pFdeZg8LI?si=feHzQ98U7dtRuXK_-->
     </div>
                       
 <footer>
