--- a/why.html
+++ b/why.html
@@ -28,6 +28,7 @@
                     <a href="drive.html">Drive</a>
                     <a href="br9.html">Blade Runner 2049</a>
                     <a href="la.html">La La Land</a>
+                    <a href="barb.html">Barbie</a>
                 </div>
             </div>
                 <a href="why.html">Why Him</a>
