--- a/why.html
+++ b/why.html
@@ -33,7 +33,7 @@
             </div>
                 <a href="why.html">Why Him</a>
                 <a href="mem.html">Meme</a>
-                <a href="#">Links</a>
+                <a href="link.html">Links</a>
                 </nav>
         </header>
 
