--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <a href="why.html">Why Him</a>
+    <a href="why.html">About</a>
     <a href="mem.html">Meme</a>
     <a href="link.html">Links</a>
   </nav>
@@ -117,7 +117,6 @@
       Ryan Gosling stands out for his artistic courage and depth.
       He consistently chooses roles that challenge conventions,
       redefining modern masculinity and emotional expression in cinema.
-      <br><br><a href="why.html" class="btn">Discover Why</a>
     </p>
   </section>
 
