--- a/why.html
+++ b/why.html
@@ -6,7 +6,7 @@
         <title>RYAN.GOSLING</title>
         <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="whyst.css">
     </head>
 
     <body>
@@ -31,14 +31,31 @@
                     <a href="barb.html">Barbie</a>
                 </div>
             </div>
-                <a href="why.html">Why Him</a>
+                <a href="why.html">About</a>
                 <a href="mem.html">Meme</a>
                 <a href="link.html">Links</a>
                 </nav>
         </header>
 
-        
-                        </div>
+        <div class="container">
+
+    <div class="row reverse">
+        <div class="text">
+            <h2>About author</h2>
+            <p>Good afternoon. My name is Nazar and I am 18 years old. My homeland is Ukraine. All my life I live in Bucha city. It is very green and beautiful place. I have graduated from Buchas' Liceum №5. Also I play the bass guitar and have little cover band at home, we usually play classic rock or funk.
+
+I am currently studying at Griffith. Here I am studying Computer Science. I chose this field because I have been interested in it since childhood. I like to explore how programs work from the inside. From the discipline, I like WebDev and Java the most.
+
+In my free time, I try not to forget to play the bass, and although I don’t have a band here yet, I continue to play solo. This is how I relieve stress after a hard day. And just relax and be alone with myself. I also like to go hiking, especially in the mountains. Fishing is one more hobby.</p>
+  </div>
+
+  <div class="image2">
+    <img src="img/fish.jpg" class="simg">
+  </div>
+</div>
+
+        </div>
+                        
 
 <footer>
 <p>© 2026 RYAN GOLSING. All rights reserved. </p>
