--- a/drive.html
+++ b/drive.html
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <a href="why.html">Why Him</a>
+    <a href="why.html">About</a>
     <a href="mem.html">Meme</a>
     <a href="link.html">Links</a>
   </nav>
