--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <body>
 
-        <header class="header">
-  <div class="logo">HERO RYAN GOSLING</div>
-
+        <header class="header">     
+  <div class="logo"> <a href="https://youtu.be/-DSVDcw6iW8?si=5s2OMmMDdsqFySLn">HERO RYAN GOSLING</a></div>
+  
   <input type="checkbox" id="menu-toggle">
 
   <label for="menu-toggle" class="burger">
